--- a/index.html
+++ b/index.html
@@ -726,8 +726,9 @@
         const behaviorData = {
             mistakes: [ //ku qor qalalaadka halkaani       halkaani   halkaani    halkaani   halkaani   halkaani   halkaani  halkaani   halkaani   halkaani
                 "Maqnaasho xanuun",
-                
-            ],
+    "Maqnaasho xanuun",
+                "Maqnaasho xanuun",
+     ],
             goodDeeds: [
                 "Kaalmo la siiyay arday kale",
                
@@ -962,4 +963,5 @@
         document.getElementById('attendancePdfBtn').addEventListener('click', generateAttendancePDF);
     </script>
 </body>
+
 </html>
