--- a/index.html
+++ b/index.html
@@ -651,15 +651,15 @@
         // Sample data for results
         const resultsData = {
             1: [
-                { subject: 'Xisaab', grade: 0 },
-                { subject: 'Seynis', grade: 0 },
+                { subject: 'Xisaab', grade: 49.8 },
+                { subject: 'Seynis', grade: 54.8 },
                 { subject: 'Somali', grade: 0 },
-                { subject: 'C.bulsho', grade: 0 },
-                { subject: 'Carabi', grade: 0 },
-                { subject: 'Tarbiyo', grade: 0 },
-                { subject: 'English', grade: 0 },
-                { subject: 'Teknoloji', grade: 0 },
-                { subject: 'Baratiko', grade: 0 }
+                { subject: 'C.bulsho', grade: 85 },
+                { subject: 'Carabi', grade: 65 },
+                { subject: 'Tarbiyo', grade: 60 },
+                { subject: 'English', grade: 50.4 },
+                { subject: 'Teknoloji', grade: 27 },
+                { subject: 'Caafimaad', grade: 10 }
             ],
             2: [
                 { subject: 'Xisaab', grade: 0 },
@@ -965,3 +965,4 @@
 </body>
 
 </html>
+
